<resources>
    <string name="app_name">Walk!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">El usuario no es válido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">El password es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="grant_permissions">Dar permisos</string>
    <string name="please_grant_permissions">Por favor, acepte los permisos</string>
    <string name="pasos">Pasos</string>
    <string name="calorias">Calorias</string>
    <string name="tu_dieta">Tu dieta</string>
    <string name="desayuno">Desayuno</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Password</string>
    <string name="peso">Peso</string>
    <string name="estatura">Estatura</string>
    <string name="edad">Edad</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="registro">Registro</string>

</resources>
